--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -8,7 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/textView2"
+        android:id="@+id/ComposeView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
