--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,7 +15,7 @@
     <!--  Theme Proprieties -->
     <style name="Theme.Botofan" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/invertedBackgrounds</item>
         <item name="android:textColorHint">#0000005F</item>
         <item name="android:layout_height">50dp</item>
         <item name="cardViewStyle">@style/CardView_</item>
@@ -23,7 +23,6 @@
         <item name="colorPrimary">@color/transparent</item>
         <item name="bottomAppBarStyle">@style/BottomAppBarAndrei</item>
         <item name="buttonStyle">@style/DefaultButtonAndrei</item>
-
     </style>
 
     </resources>
