--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -105,7 +105,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:descendantFocusability="blocksDescendants"
                         android:selectionDividerHeight="0dp"
                         android:theme="@style/NumberPickerStyle2" />
                 </LinearLayout>
@@ -122,7 +121,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:focusableInTouchMode="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -220,8 +218,8 @@
 
                                 <ImageView
                                     android:id="@+id/calendarClick"
-                                    android:layout_width="40dp"
-                                    android:layout_height="40dp"
+                                    android:layout_width="45dp"
+                                    android:layout_height="45dp"
                                     android:background="@drawable/ripple_circle"
                                     android:backgroundTint="@color/liftedBackgrounds"
                                     android:backgroundTintMode="screen"
@@ -229,10 +227,10 @@
                                     android:padding="9dp"
                                     app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintHorizontal_bias="1.0"
+                                    app:layout_constraintHorizontal_bias="0.98"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
-                                    app:layout_constraintVertical_bias="0.0"
+                                    app:layout_constraintVertical_bias="0.26"
                                     app:srcCompat="@drawable/rounded_calendar_month_24" />
 
                                 <TextView
@@ -300,6 +298,7 @@
         android:backgroundTintMode="add"
         android:clickable="true"
         android:translationY="800dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -310,7 +309,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="#6B608DBA"
-            android:focusable="auto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
