--- a/app/src/main/res/layout/alarm_example.xml
+++ b/app/src/main/res/layout/alarm_example.xml
@@ -81,25 +81,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.26" />
 
-                <CheckBox
-                    android:id="@+id/checkBox"
-                    android:layout_width="24dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:background="@null"
-                    android:button="@drawable/checkbox_round_button"
-                    android:checked="false"
-                    android:clickable="false"
-                    android:textColor="#FFFFFF"
-                    android:textColorLink="#D55555"
-                    android:translationX="-34dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.5" />
-
                 <LinearLayout
                     android:id="@+id/days"
                     android:layout_width="115dp"
@@ -141,7 +122,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/transparent"
-                        android:button="@drawable/letter_t"
+                        android:button="@drawable/letter_w"
                         android:clickable="false"
                         android:scaleX="0.8"
                         android:scaleY="0.8" />
@@ -152,7 +133,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/transparent"
-                        android:button="@drawable/letter_w"
+                        android:button="@drawable/letter_t"
                         android:clickable="false"
                         android:scaleX="0.8"
                         android:scaleY="0.8" />
@@ -205,6 +186,27 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/state"
                     app:layout_constraintVertical_bias="0.017" />
+
+                <CheckBox
+                    android:id="@+id/checkBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:background="@null"
+                    android:button="@drawable/checkbox_round_button"
+                    android:checked="false"
+                    android:clickable="false"
+                    android:includeFontPadding="true"
+                    android:textColor="#FFFFFF"
+                    android:textColorLink="#D55555"
+                    android:translationX="-34dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.5" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
