--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,13 +7,13 @@
 
 
     <!-- The Default Theme-->
-    <style name="Theme.MyApplication2" parent="Theme.Botofan" />
+
 
 
 
 
     <!--  Theme Proprieties -->
-    <style name="Theme.Botofan" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.MyApplication2" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/invertedBackgrounds</item>
         <item name="android:textColorHint">#0000005F</item>
