--- a/app/src/main/res/layout/activity_storage_main.xml
+++ b/app/src/main/res/layout/activity_storage_main.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/internalRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 android:paddingVertical="5dp" />
 
             <TextView
@@ -49,6 +50,7 @@
                 android:id="@+id/externalRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:overScrollMode="never"
                 android:paddingVertical="5dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
