--- a/app/src/main/res/layout/fragment_blank2.xml
+++ b/app/src/main/res/layout/fragment_blank2.xml
@@ -49,4 +49,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/middlescreen" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="161dp"
+        android:layout_height="67dp"
+        android:text="Music"
+        app:layout_constraintBottom_toTopOf="@+id/butonEnterFileExplorer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/middlescreen" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
