--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MyApplication2" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.MyApplication2" parent="Theme.Material3.DayNight.NoActionBar">
 
         <item name="buttonStyle">@style/AndreiButonStyle</item>
     </style>
 
 
-    <!-- The Default Theme-->
 
 
 
-
-
-    <!--  Theme Proprieties -->
-    <style name="Theme.MyApplication2" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.BotofanThemeNoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/invertedBackgrounds</item>
         <item name="android:textColorHint">#0000005F</item>
@@ -23,6 +19,34 @@
         <item name="colorPrimary">@color/transparent</item>
         <item name="bottomAppBarStyle">@style/BottomAppBarAndrei</item>
         <item name="buttonStyle">@style/DefaultButtonAndrei</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+
+    <!--  Theme Proprieties -->
+    <style name="Theme.BotofanThemeWithActionBar" parent="Theme.AppCompat.DayNight">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/invertedBackgrounds</item>
+        <item name="android:textColorHint">#0000005F</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="cardViewStyle">@style/CardView_</item>
+        <item name="colorPrimaryVariant">@color/transparent</item>
+        <item name="colorPrimary">@color/transparent</item>
+        <item name="bottomAppBarStyle">@style/BottomAppBarAndrei</item>
+        <item name="buttonStyle">@style/DefaultButtonAndrei</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="Theme.MyApplication2.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MyApplication2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MyApplication2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
