--- a/app/src/main/res/layout/activity_songs_main_view.xml
+++ b/app/src/main/res/layout/activity_songs_main_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainMain"
+    android:id="@+id/mainCoord"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -30,11 +30,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@drawable/side_nav_bar"
+            android:background="@drawable/gradient_right_corner"
             android:theme="@style/Theme.BotofanThemeNoActionBar"
             app:headerLayout="@layout/nav_header_song_player_main"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
             app:menu="@menu/song_nav_menu" />
 
 
     </androidx.drawerlayout.widget.DrawerLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
