--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,6 +21,10 @@
         <item name="buttonStyle">@style/DefaultButtonAndrei</item>
         <item name="android:windowTranslucentStatus">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <item name="android:windowLayoutInDisplayCutoutMode">
+            never <!-- default, shortEdges, or never -->
+        </item>
     </style>
 
 
@@ -37,6 +41,10 @@
         <item name="buttonStyle">@style/DefaultButtonAndrei</item>
         <item name="android:windowTranslucentStatus">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <item name="android:windowLayoutInDisplayCutoutMode">
+            never <!-- default, shortEdges, or never -->
+        </item>
     </style>
 
     </resources>
