--- a/app/src/main/res/layout/fragment_songs_main__base.xml
+++ b/app/src/main/res/layout/fragment_songs_main__base.xml
@@ -198,7 +198,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/scene1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="0dp"
                 android:background="#01F64A"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -223,7 +223,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.5" />
+                    app:layout_constraintVertical_bias="0.00999999" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
