God i hate compose so much

--- a/app/src/main/res/layout/fragment_simple_song_list.xml
+++ b/app/src/main/res/layout/fragment_simple_song_list.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="SongsMain.Tabs.SimpleSongList">
 
     <ListView
         android:id="@+id/songView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
