--- a/app/src/main/res/layout/activity_songs_main_view.xml
+++ b/app/src/main/res/layout/activity_songs_main_view.xml
@@ -22,8 +22,8 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView"
             android:name="SongsMain.SongsMain_Base"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navView"
